panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__struct__test_error_no_such_member.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/struct/test_error_no_such_member.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/struct/test_error_no_such_member.c"
   (typedef ptrdiff_t `typeof((subtract (cast `ptr<char>` nullptr) (cast `ptr<char>` nullptr)))`)
   (typedef size_t `typeof((sizeof `char`))`)
   (typedef max_align_t `long long`)
   (typedef wchar_t `int`)
   (typedef nullptr_t `typeof(nullptr)`)
   (struct T~0
      (member x `int`))
   (union U~1
      (member x `int`))
   (function-definition
      main~2 `fn() -> int`
      (compound-statement
         (declaration t~4 `struct T~0 complete` (braced ∅))
         (declaration u~5 `union U~1 complete` (braced ∅))
         (expression
            (assign
               (dot does_not_exist
                  (name t~4 `struct T~0 complete`))
               42))
         (expression
            (assign
               (dot wat
                  (name u~5 `union U~1 complete`))
               (string "wat")))
         (return (add (offsetof `struct T~0 complete` no_such_struct_member) (offsetof `union U~1 complete` no_such_union_member))))))

----- stderr -----
