panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__struct__test_error_offsetof.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/struct/test_error_offsetof.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/struct/test_error_offsetof.c"
   (typedef ptrdiff_t `typeof((subtract (cast `ptr<char>` nullptr) (cast `ptr<char>` nullptr)))`)
   (typedef size_t `typeof((sizeof `char`))`)
   (typedef max_align_t `long long`)
   (typedef wchar_t `int`)
   (typedef nullptr_t `typeof(nullptr)`)
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (expression (offsetof `int` n))
         (expression (offsetof `struct Incomplete~2` member)))))

----- stderr -----
