panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__struct__test_forward_declaration_without_declarator.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/struct/test_forward_declaration_without_declarator.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/struct/test_forward_declaration_without_declarator.c"
   (function-definition
      f1~1 `fn() -> void`
      (compound-statement
         (declaration p1~3 `ptr<struct T~0>` ∅)
         (declaration p2~4 `ptr<struct T~0>` ∅)))
   (function-definition
      f2~5 `fn() -> void`
      (compound-statement
         (declaration p1~7 `ptr<struct T~0>` ∅)
         (declaration p2~8 `ptr<struct T~0>` ∅)))
   (function-definition
      forward_decl_in_local_scope~9 `fn() -> void`
      (compound-statement
         (compound-statement
            (declaration p1~12 `ptr<struct U~11>` ∅)
            (declaration p2~13 `ptr<struct U~11>` ∅))
         (compound-statement
            (declaration p1~14 `ptr<struct U~11>` ∅)
            (declaration p2~15 `ptr<struct U~11>` ∅)))))

----- stderr -----
